2002-08-02  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py: make URL for printfilename option.

	* lily/beam.cc (position_with_maximal_common_beams): fix kneed
	beamlets. This fixes input/bugs/knee

	* ly/engraver-init.ly (HaraKiriStaffContext): switch off auto knee
	for hara kiri staffs.

	* lily/slur-engraver.cc (try_music): remove nested slur
	functionality. This fixes spurious warnings with the partcombiner.

2002-08-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parse-scm.cc (protected_ly_parse_scm): guile 1.4 compatibility.

2002-08-01 Rune Zedeler <rune@zedeler.dk>

	* lily/tab-note-heads-engraver.cc: add algorithm for automatically
	selecting frets when none given by user. Read property
	"minimumFret".

	* scm/translator-property-description.scm: Add "minimumFret"
	
	* mf/feta-eindelijk.mf: Changed layout of 16th and shorter rests
	to match the 8th rest. slanted 8th rest a bit more.
	WARNING: 8th rest and classical quarter rest exchanged.
	
2002-07-31 Rune Zedeler <rune@zedeler.dk>

	* input/SondagMorgen/*.ly: Added. TODO: Lots of cleanups but now
	it's there.

2002-07-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (chord_notes): typo. 

	* scm/music-functions.scm (unfold-repeats): bugfix

2002-07-31  Rune Zedeler <rune@zedeler.dk>

	* ly/engraver-init.ly: remove alias "Current" from all contexts.

	* lily/translator-group (find_existing_translator): If
	n=="Current", return this context.
	
	* lily/tab-note-heads-engraver.cc: add algorithm for automatically
	selecting frets when none given by user. Read property
	"minimumFret".

	* scm/translator-property-description.scm: add "minimumFret"

	* lily/rest.cc:
	* lily/time-signature.cc: spacing for even number of staff lines.
	
2002-07-31  Han-Wen  <hanwen@cs.uu.nl>

	* input/bugs/: remove various files.

	* Documentation/user/refman.itely: doco updates.

	* scripts/ly2dvi.py (find_pfa_fonts): add and document --pdf
	option.

2002-07-30  Rune Zedeler <rune@zedeler.dk>
