@@ -1,3 +1,9 @@
+2002-08-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/scm-option.cc: excorcise iostream.
+
+	* lily/main.cc: remove iostream usage.
+
 2002-08-02  Han-Wen  <hanwen@cs.uu.nl>
 
 	* scripts/lilypond-book.py: make URL for printfilename option.
